syntax = "proto3";

option csharp_namespace = "AccountService.Protos";

package account;

// Account Service to manage Bank Accounts
service Account {
  // Check Account Balance
  rpc CheckBalance (AccountRequest) returns (AccountReply);
}

// The request message containing the user's name.
message AccountRequest {
  string account_number = 1;
}

// The reply contains account balance
message AccountReply {
  string balance = 10;
}